--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -65,7 +65,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    font-family: Minecraft, sans-serif;
+    font-family:Minecraft, sans-serif;
 
     /* Background image in case the video is blocked */
     background-image: url("../images/background-image.png");
@@ -273,6 +273,29 @@ footer {
     cursor: pointer;
     padding-right: 10px;
     padding-left: 10px;
+}
+
+#skills-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+
+.skill-container {
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.skill-container progress {
+    border-radius: 20px;
+    border: none;
+}
+
+.skill-container .icon-text {
+    justify-content: left;
+    text-align: left;
 }
 
 #slayer-cards, .slayer-boss-killed {
