--- a/templates/stats.html
+++ b/templates/stats.html
@@ -109,7 +109,7 @@
     {% endif %}
     </div>
 </div>
-<div id="skills-stats" class="red-border stats-div">
+<div id="skills-stats" class="stats-div">
 	<h2 class="section-title center">Skills & Level</h2>
 {% if leveling_data != None %}
 	<div class="icon-text">
@@ -120,24 +120,27 @@
     	{% for skill in leveling_data %}
             {% if skill != "Global" %}
                 <div class="skill-container blurry-bg">
-                    <div class="icon-text">
-                        <img src="{{ leveling_data[skill]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
-                        <p id="{{ skill.lower() }}-info" class="skills-info tooltip-container color-b" data-tooltip="{{ leveling_data[skill]["xp"] }} EXP">
+                    <div class="skill-progression">
+                        <div class="icon-text">
+                            <img src="{{ leveling_data[skill]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
+                            <p id="{{ skill.lower() }}-info" class="skills-info tooltip-container color-b" data-tooltip="{{ leveling_data[skill]["xp"] }} EXP">
                             {{ skill | replace("2", "") }}
-                            <span class="color-f bold">
-                                : {{ leveling_data[skill]["level"] | replace('-1', '0') }}
-                            </span>
-                        </p>
+                                <span class="color-f bold">
+                                    : {{ leveling_data[skill]["level"] | replace('-1', '0') }}
+                                </span>
+                            </p>
+                        </div>
+                        <label for="{{ skill }}-progress">
+                            <span class="color-3">{{ '{value:,.0f}'.format(value=leveling_data[skill]['level_xp']) }}</span>
+                            <span class="color-9 bold">/</span>
+                            {% if leveling_data[skill]['next_level_xp'] == 0 %}
+                                <i class="color-b bold">MAX LEVEL</i>
+                            {% else %}
+                                <span class="color-3">{{ '{value:,.0f}'.format(value=leveling_data[skill]['next_level_xp']) }}</span>
+                                <span class="color-9 bold">EXP</span>
+                            {% endif %}
+                        </label>
                     </div>
-                    <label for="{{ skill }}-progress">
-                        <span class="color-3">{{ '{value:,.0f}'.format(value=leveling_data[skill]['level_xp']) }}</span>
-                        <span class="color-9 bold">/</span>
-                        {% if leveling_data[skill]['next_level_xp'] == 0 %}
-                            <i class="color-b bold">MAX LEVEL</i>
-                        {% else %}
-                            <span class="color-3">{{ '{value:,.0f}'.format(value=leveling_data[skill]['next_level_xp']) }}</span>
-                        {% endif %}
-                    </label>
                     <progress id="{{ skill }}-progress" max="{{ leveling_data[skill]['next_level_xp'] }}"
                               value="{{ leveling_data[skill]['level_xp'] }}">
                         {{ leveling_data[skill]['level_xp'] }}/{{ leveling_data[skill]['next_level_xp'] }}
